# mathaka

./: Cargo.toml  LICENSE  README.md
mathaka/: Cargo.toml
mathaka/src/: main.rs
mathakalib/: Cargo.toml
mathakalib/src/: lexer.rs  lib.rs  macros.rs
mathakalib/src/data/: mod.rs  token.rs
mathakalib/src/data/str_info/: iter.rs  mod.rs
