[package]
name = "mathaka"
version = "0.1.0"
edition = "2021"
authors = ["akanevrc <akanezoranomukou@gmail.com>"]
description = "Support and Solve Mathematical Proofs."

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5.1", features = ["derive"] }
mathakalib = { version = "0.1.0", path = "../mathakalib" }
